# backend/recordbin/views.py
@@ -1,21 +1,21 @@
-from rest_framework import viewsets
-from rest_framework import mixins
-from django_filters.rest_framework import DjangoFilterBackend
 import re
+from rest_framework import viewsets, mixins
+from rest_framework.permissions import IsAdminUser, IsAuthenticated
+from django_filters.rest_framework import DjangoFilterBackend
 
-# Add Auth
-# https://www.django-rest-framework.org/api-guide/authentication/#setting-the-authentication-scheme
-# from rest_framework.permissions import IsAuthenticated
-
-from .models import Record, RecordSerializer
+from .models import (
+    Record,
+    RecordSerializer,
+    Source,
+    SourceSerializer,
+    SourceToken,
+    SourceTokenSerializer,
+)
 from .filtersets import RecordFilterSet
 
 
 class RecordViewSet(
-    mixins.ListModelMixin,
-    mixins.RetrieveModelMixin,
-    mixins.CreateModelMixin,
-    viewsets.GenericViewSet,
+    mixins.ListModelMixin, mixins.CreateModelMixin, viewsets.GenericViewSet
 ):
     """
     list:
@@ -25,6 +25,7 @@ class RecordViewSet(
     Create a new record instance.
     """
 
+    # Added Globally on `settings/base.py`
     # authentication_classes = (TokenAuthenticationWithUrlSupport,)
     # permission_classes = (IsAuthenticated,)
 
@@ -34,7 +35,8 @@ class RecordViewSet(
     filter_backends = (DjangoFilterBackend,)
 
     def perform_create(self, serializer):
-        serializer.save(user_id=self.request.auth.user.id)
+        token = self.request.auth
+        serializer.save(source_id=token.source.pk)
 
     def get_queryset(self):
         params = self.request.query_params.copy()
@@ -45,5 +47,41 @@ class RecordViewSet(
             if match:
                 field = match.group(1)
                 filter_kwargs[f"data__{field}"] = value
-        filter_kwargs["user"] = self.request.auth.user
+        token = self.request.auth
+        if token:
+            source = token.source
+            filter_kwargs["source"] = source
+        elif not token and self.request.user.is_authenticated:
+            # Session Authenticatio from API View, no Token
+            filter_kwargs["source__owner"] = self.request.user
+        else:
+            return Record.objects.none()
         return Record.objects.filter(**filter_kwargs)
+
+
+class SourceViewSet(mixins.ListModelMixin, viewsets.GenericViewSet):
+    """
+    list:
+    Return a list of Record Sources.
+    """
+
+    permission_classes = (IsAuthenticated, IsAdminUser)
+    queryset = Source.objects.all()
+    serializer_class = SourceSerializer
+
+    def list(self, *args, **kwargs):
+        return super().list(*args, **kwargs)
+
+
+class SourceTokenViewSet(mixins.ListModelMixin, viewsets.GenericViewSet):
+    """
+    list:
+    Return a list of Record Source Tokens.
+    """
+
+    permission_classes = (IsAuthenticated, IsAdminUser)
+    queryset = SourceToken.objects.all()
+    serializer_class = SourceTokenSerializer
+
+    def list(self, *args, **kwargs):
+        return super().list(*args, **kwargs)
